<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nazivET"
        android:hint="@string/nazivET"
        android:textSize="14sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/porodicaET"
        />

    <EditText
        android:id="@+id/porodicaET"
        android:hint="@string/porodicaET"
        android:textSize="14sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nazivET"
        app:layout_constraintBottom_toTopOf="@+id/medicinskoUpozorenjeET"
        />

    <EditText
        android:id="@+id/medicinskoUpozorenjeET"
        android:hint="@string/medicinskoUpozorenjeET"
        android:textSize="14sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/porodicaET"
        app:layout_constraintBottom_toTopOf="@+id/jeloET"
        />

    <EditText
        android:id="@+id/jeloET"
        android:hint="@string/jeloET"
        android:textSize="14sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medicinskoUpozorenjeET"
        app:layout_constraintBottom_toTopOf="@id/LinearText1"
        />

    <LinearLayout
        android:id="@+id/LinearText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jeloET"
        app:layout_constraintBottom_toTopOf="@id/LinearContainer1">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            android:text="@string/medicinskaKorist"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="1dp"
            android:textSize="14sp"
            android:text="@string/klimatskiTip"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:text="@string/zemljisniTip"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearContainer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/LinearText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/LinearText2"
        android:baselineAligned="false">

        <ListView
            android:id="@+id/medicinskaKoristLV"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginEnd="8dp"
            />

        <ListView
            android:id="@+id/klimatskiTipLV"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="1dp"
            />

        <ListView
            android:id="@+id/zemljisniTipLV"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearContainer1"
        app:layout_constraintBottom_toTopOf="@id/LinearContainer2">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            android:text="@string/jela"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:textSize="14sp"
            android:text="@string/profilOkusa"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearContainer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearText2"
        app:layout_constraintBottom_toTopOf="@id/ButtonContainer">

        <ListView
            android:id="@+id/jelaLV"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginEnd="8dp"
            />

        <ListView
            android:id="@+id/profilOkusaLV"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="1dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ButtonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearContainer2">

        <Button
            android:id="@+id/dodajJeloBtn"
            android:text="@string/dodajJelo"
            android:textSize="12sp"
            android:backgroundTint="#009205"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            />

        <Button
            android:id="@+id/dodajBiljkuBtn"
            android:text="@string/dodajBiljku"
            android:textSize="12sp"
            android:backgroundTint="#009205"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            />

        <Button
            android:id="@+id/uslikajBiljkuBtn"
            android:text="@string/uslikajBiljku"
            android:textSize="12sp"
            android:backgroundTint="#009205"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>