<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/slikaItem"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/default_img" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nazivItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/plantName"
                android:textAlignment="center"
                android:background="#B2F5AD"
                android:textColor="@android:color/black"
                android:textSize="14sp" /> <!-- TEXT SIZE MAYBE IZBACITI  -->

            <TextView
                android:id="@+id/upozorenjeItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:text = "@string/medWarning_text"
                android:textAlignment="center"
                android:textSize="14sp" />  <!-- TEXT SIZE MAYBE IZBACITI  -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/korist1Item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/medBenefit1"
                    android:textAlignment="center"
                    android:ellipsize="end"
                    android:maxLines="1"/>

                <TextView
                    android:id="@+id/korist2Item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/medBenefit2"
                    android:textAlignment="center"
                    android:ellipsize="end"
                    android:maxLines="1"/>

                <TextView
                    android:id="@+id/korist3Item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/medBenefit3"
                    android:textAlignment="center"
                    android:ellipsize="end"
                    android:maxLines="1"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>