<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topLinearni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/pretragaLinearni"
        >

        <Spinner
            android:id="@+id/modSpinner"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"


            android:backgroundTint="@color/accentColor"
            android:text="@string/resetBtn"
            android:textSize="14sp"
            android:textColor="@color/buttonText"
            />

        <Button
            android:id="@+id/novaBiljkaBtn"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_weight="1"

            android:backgroundTint="@color/accentColor"
            android:text="@string/addPlant"
            android:textColor="@color/buttonText"
            android:textSize="14sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pretragaLinearni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/topLinearni"
        app:layout_constraintBottom_toTopOf="@+id/biljkeRV"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pretragaText"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="3dp"
            android:textSize="14sp"
        />

        <EditText
            android:id="@+id/pretragaET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/substringET"
            android:textSize="14sp"
            />

        <LinearLayout
            android:id="@+id/unutrasniLinearni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <Spinner
                android:id="@+id/bojaSPIN"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                />

            <Button
                android:id="@+id/brzaPretraga"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/accentColor"
                android:text="@string/pretragabtn"
                android:textColor="@color/buttonText"
                android:textSize="14sp"
                />
        </LinearLayout>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/biljkeRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pretragaLinearni"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>